Fixed bad collection view width on small resolutions due to the padding and close button of the popup

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -909,7 +909,7 @@ StScrollBar StButton#vhandle:active {
 }
 
 .pages-indicator {
-	spacing: 30px;
+	spacing: 50px;
 }
 
 .app-folder-icon {
